force-app/main/default/objects/Volunteer__c/Volunteer__c.object-meta.xml
<CustomObject>
    <description>Custom Object to keep the records of Volunteers taking part in the Foundation&apos;s projects.</description>
    <label>Volunteer</label>
    <nameField>
        <label>Volunteer Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>