force-app/main/default/objects/Volunteer__c/fields/LinkedIn_Account__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Account__c</fullName>
    <description>LinkedIn account information of the Volunteer.</description>
    <label>LinkedIn Account</label>
    <required>true</required>
    <type>Url</type>
</CustomField>