force-app/main/default/objects/Volunteer__c/fields/Project_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Team Name</label>
    <referenceTo>Project_Team__c</referenceTo>
    <relationshipLabel>Volunteers</relationshipLabel>
    <relationshipName>Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>