force-app/main/default/objects/Volunteer__c/fields/Trailhead_Account__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Account__c</fullName>
    <description>Trailhead account information of the Volunteer</description>
    <label>Trailhead Account</label>
    <required>true</required>
    <type>Url</type>
</CustomField>