force-app/main/default/objects/Volunteer__c/fields/Views_and_Notes__c.field-meta.xml
<CustomField>
    <fullName>Views_and_Notes__c</fullName>
    <description>The Foundation&apos;s views and notes about the Volunteer.</description>
    <label>Views and Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>