force-app/main/default/objects/Volunteer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Role__c</columns>
    <columns>Email__c</columns>
    <columns>LinkedIn_Account__c</columns>
    <columns>Trailhead_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>